--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <header class="page-header">
       <div class="container">
-        +7 (960)(944)83-00
-        rusgameskillerju@gmail.com
-        vk
+        <a href="tel:79609448300" class="header-phone">+7 (960)(944)83-00</a>>
+        <a href="mail:rusgameskillerju@gmail.com" class="header-email">rusgameskillerju@gmail.com</a>
+        <a href="https://vk.com/killerju1243" >VK</a>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Артем</h1>
+        <h1 class="heading">Голубев Артем</h1>
         <p>Начинающий верстальщик</p>
       </div>
     </section>
@@ -26,6 +26,9 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image" >
+          <img src="files/user.jpg" width="928" height="1236" alt="Фотография Голубева Артема">
+        </figure>
         <h3>Меня зовут Артем и я только начинаю верстать сайты.</h3>
         <p>Сильно нравится кодить.</p>
         <h3>Могу сверстать сайт</h3>
@@ -36,9 +39,13 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+        
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+        </figure>
         <h3>Сайт инструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
 
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
@@ -47,9 +54,9 @@
 
     <footer class="page-footer">
       <div class="container">
-        +7 (960)(944)83-00
-        rusgameskillerju@gmail.com
-        vk
+        <a href="tel:79609448300" class="footer-phone">+7 (960)(944)83-00</a>>
+        <a href="mail:rusgameskillerju@gmail.com" class="footer-email">rusgameskillerju@gmail.com</a>
+        <a href="https://vk.com/killerju1243" >VK</a>
       </div>
     </footer>
   </body>
