--- a/index.html
+++ b/index.html
@@ -1,63 +1,84 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-  </head>
 
-  <body>
-    <header class="page-header">
-      <div class="container">
-        <a href="tel:79609448300" class="header-phone">+7 (960)(944)83-00</a>>
-        <a href="mail:rusgameskillerju@gmail.com" class="header-email">rusgameskillerju@gmail.com</a>
-        <a href="https://vk.com/killerju1243" >VK</a>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Портфолио Junior верстальщика</title>
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic"
+    rel="stylesheet">
+</head>
 
-    <section class="hero-image">
-      <div class="container">
-        <h1 class="heading">Голубев Артем</h1>
-        <p>Начинающий верстальщик</p>
-      </div>
-    </section>
+<body>
+  <header class="page-header">
+    <div class="container">
+      <a href="tel:79609448300" class="header-phone">+7 (960)(944)83-00</a>
+      <a href="mail:rusgameskillerju@gmail.com" class="header-email">rusgameskillerju@gmail.com</a>
+      <a href="https://vk.com/killerju1243">VK</a>
+    </div>
+  </header>
 
-    <section class="intro">
-      <div class="container">
-        <h2 class="subheading">Давайте познакомимся</h2>
-        <figure class="user-image" >
-          <img src="files/user.jpg" width="928" height="1236" alt="Фотография Голубева Артема">
-        </figure>
+  <section class="hero-image">
+    <div class="container">
+      <h1 class="heading">Голубев Артем</h1>
+      <p>Начинающий верстальщик</p>
+    </div>
+  </section>
+
+  <section class="intro">
+    <div class="container">
+      <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="1236" alt="Фотография Голубева Артема">
+      </figure>
+      <div>
         <h3>Меня зовут Артем и я только начинаю верстать сайты.</h3>
         <p>Сильно нравится кодить.</p>
+      </div>
+      <div>
         <h3>Могу сверстать сайт</h3>
         <p>Текст о том, чем могу быть полезен.</p>
       </div>
-    </section>
-
-    <section class="portfolio">
-      <div class="container">
-        <h2 class="subheading">Мои работы</h2>
-        
-        <figure class="project-image">
-          <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
-        </figure>
-        <h3>Сайт инструктора Кекса</h3>
-        <p>Небольшой лендинг о школе для начинающих.</p>
-        <a class="button" href="source/project/index.html">Открыть страницу</a>
-
-        <h3>Блог начинающего верстальщика</h3>
-        <p>Статический блог про обучение HTML и CSS.</p>
+      <div class="skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level">
+            <div style="width: 60%;">60%</div>
+          </dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level">
+            <div style="width: 40%;">40%</div>
+          </dd>
+        </dl>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <footer class="page-footer">
-      <div class="container">
-        <a href="tel:79609448300" class="footer-phone">+7 (960)(944)83-00</a>>
-        <a href="mail:rusgameskillerju@gmail.com" class="footer-email">rusgameskillerju@gmail.com</a>
-        <a href="https://vk.com/killerju1243" >VK</a>
-      </div>
-    </footer>
-  </body>
+  <section class="portfolio">
+    <div class="container">
+      <h2 class="subheading">Мои работы</h2>
+
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
+      <h3>Сайт инструктора Кекса</h3>
+      <p>Небольшой лендинг о школе для начинающих.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
+
+      <h3>Блог начинающего верстальщика</h3>
+      <p>Статический блог про обучение HTML и CSS.</p>
+    </div>
+  </section>
+
+  <footer class="page-footer">
+    <div class="container">
+      <a href="tel:79609448300" class="footer-phone">+7 (960)(944)83-00</a>
+      <a href="mail:rusgameskillerju@gmail.com" class="footer-email">rusgameskillerju@gmail.com</a>
+      <a href="https://vk.com/killerju1243">VK</a>
+    </div>
+  </footer>
+</body>
+
 </html>
